Server made stateless, various UI tweaks
